# my-claude-os

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  DECISIONS.md  OS.md  PAPER-AI-PIPELINE.md  README.md  build.gradle.kts  do.txt  os.md  package-lock.json  package.json  portfolio.md  pyproject.toml  run-tests.sh
.claude/: .gitignore  CLAUDE.md  OS.md  menu.md  settings.json
.github/: pull_request_template.md
00_principles/: investment-principles.md
01_profile/: investor-profile.md
02_portfolio/: holdings.example.md  watchlist.md
03_journal/: trade-journal.md
04_daily/: 2026-06-25.md  _template.md
05_reference/: data-sources.md  tax-and-fees.md
app/: config.py  database.py  errors.py  main.py
automation/: README.md  com.stock-os.daily-report.plist  run-daily-report.sh
demo-app/: package-lock.json  package.json
docs/: CONVENTIONS.md  OS-log.md  OS.md  calculator.md  crypto.md  feature-flow.html  onboarding.md  subagent-map.html  sudoku.md  week1.html
habit-tracker/: build.gradle
journal/: 2026-07-01.md  README.md  TEMPLATE.md
output/: 01_analysis.md  03_detail_part0.md  03_detail_part1.md  03_detail_part2.md  05_run.md  README.md  feedback_analysis.md  feedback_code.md  feedback_detail.md  feedback_html.md  feedback_run.md
prisma/: schema.prisma  seed.ts
prompts/: daily-advice-prompt.md
scripts/: collect.ts  md-to-telegram.sh  notify-telegram.sh  skill_stats.py  tossctl-commands.md
tests/: README.md  conftest.py  lint.sh  smoke.sh  test_login.py  test_schemas.py  test_security.py  test_signup.py  test_skill_stats.py  unit.test.js
(+351 files in other folders)
